k8/currency-exchange-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: currency-exchange
  name: currency-exchange
  namespace: default
spec:
  replicas: 1
  minReadySeconds: 45
  selector:
    matchLabels:
      app: currency-exchange
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: currency-exchange
    spec:
      containers:
      - image: in28min/currency-exchange:0.0.1-RELEASE
        imagePullPolicy: IfNotPresent
        name: currency-exchange
        ports:
        - name: liveness-port
          containerPort: 8000
        resources:
          requests: #initial
            cpu: 100m
            memory: 512Mi
          limits: #max can get
            cpu: 500m
            memory: 1024Mi
        args:
        - /server
        readinessProbe: #To find out if the container is ready to accept request
          httpGet:
            path: /
            port: liveness-port
            httpHeaders:
            - name: X-Custom-Header
              value: Awesome
          failureThreshold: 5
          periodSeconds: 10
          initialDelaySeconds: 60
        livenessProbe: # to check if the container in on dead log if so then it will be restarted
          httpGet:
            path: /
            port: liveness-port
          failureThreshold: 5
          periodSeconds: 10
          initialDelaySeconds: 60
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: currency-exchange
  name: currency-exchange
  namespace: default
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: currency-exchange
  sessionAffinity: None
  type: NodePort
